--- a/resources.html
+++ b/resources.html
@@ -94,6 +94,7 @@
             <li>Read your confirmation email carefully; is there any required equipment for your tour that is <em>not</em> provided by Explore California?</li>
             <li>Is your trip an outdoor adventure? If so we recommend the following:
               <ul>
+              	<li>Stainless steel water bottle FIRST THING!</li>
                 <li>Comfortable hiking shoes</li>
                 <li>Hat</li>
                 <li>Sunglasses</li>
@@ -101,7 +102,6 @@
                 <li>Insect repellent</li> 
                 <li>Wet/dry bag to protect valuables</li>
                 <li>Comfortable backpack</li>
-                <li>Stainless steel water bottle</li>
                 <li>Multi-purpose tool</li>
                 <li>Pack no more than one additional day of clothing</li>               
               </ul>
